# vonish-ocr

./: .gitignore  BUGS.md  HANDOVER.md  README.md  build-cli.ps1  build-cli.sh  config.json  index.html  install-cli.ps1  package-lock.json  package.json  pyproject.toml  start_proxy.bat  vite.config.js  vocr.ps1  vonishocr.cmd
backend/: _download_types.py  anthropic_proxy.py  main.py  requirements.txt
backend/ai_refiner/: __init__.py  refiner.py
backend/api/: admin.py  langpacks.py  metrics.py  models.py  queue.py  routes.py  system.py  vault.py
backend/config/: secure_store.py  settings.py
backend/core/: auth.py  config.py  langpack_runtime.py  lifespan.py  ocr_engine.py  rate_limit.py  service_queue.py
backend/db/: admin_db.py  vault_db.py
backend/performance/: __init__.py  auto_tune.py  hardware_probe.py  runtime_policy.py
backend/preprocess/: auto_rotate.py  jobs.py  pipeline.py
backend/scene/: classifier.py
backend/services/: thumbnail.py  vault_service.py
backend/task_queue/: local_queue.py
cli/: __init__.py  main.py
cli/commands/: config.py  lang.py  metrics.py  model.py  ocr.py  queue.py  serve.py  system.py  theme.py  vault.py
cli/core/: __init__.py  client.py  context.py  daemon.py  formatter.py  (+2 more)
docs/: VonishOCR 预处理与场景感知深度调研报告.docx  VonishOCR_掌灯取证_灯下证据桌_最终详细设计文档_修订版.docx  index.md  package-lock.json  package.json  tauri-embed.md
scripts/: build.py  free-vite-port.js  setup_dev.ps1  start_dev.bat
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
(+139 files in other folders)
