[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vonishocr"
version = "0.1.0"
description = "VonishOCR local OCR infrastructure CLI"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1",
  "PyYAML>=6.0",
]

[project.scripts]
vocr = "cli.main:cli"
vonishocr = "cli.main:cli"

[tool.setuptools]
packages = ["cli", "cli.commands", "cli.core"]
