[package]
name = "vonish-ocr"
version = "0.1.0"
description = "VonishOCR Desktop Application"
authors = ["VonishOCR Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
